Fix gap product item in result search

--- a/frontend/src/style/pages/Products/Product.scss
+++ b/frontend/src/style/pages/Products/Product.scss
@@ -47,7 +47,9 @@
   margin: 0;
   padding: 0;
 }
-
+.result__search.container-fluid .row .col-lg-3 {
+  padding: 0 6px;
+}
 .small-product .product__item {
   width: 242px;
 }
